--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,7 @@
     >
     <div id="root"></div>
     <!-- HTML Template for laporkeun! -->
+    <!--   Apps created by yusr.dhm (DO NOT DELETE)   -->
+    <!--   Aplikasi dibuat oleh yusr.dhm (JANGAN DIHAPUS)   -->
   </body>
 </html>
